--- a/src/styles/TopHeader.module.css
+++ b/src/styles/TopHeader.module.css
@@ -516,6 +516,7 @@
 
 .megaImage {
   width: 100%;
+  height: 600px;
   aspect-ratio: 16 / 9;
   background-size: cover;
   background-position: center;
@@ -635,6 +636,7 @@
   display: grid;
   grid-template-rows: minmax(220px, 1.5fr) auto;
   width: 100%;
+  height: 600px;
   border-radius: 16px;
   overflow: hidden;
   background: #0b1120;
