--- a/src/styles/projects/ProjectHero.module.css
+++ b/src/styles/projects/ProjectHero.module.css
@@ -85,7 +85,7 @@
 .logoImg {
   width: 100%;
   height: 227px;
-  /* object-fit: contain; */
+  object-fit: scale-down;
 }
 
 /* ===== RIGHT: GOOGLE REVIEWS BLOCK ===== */
