--- a/src/styles/projects/ProjectIntro.module.css
+++ b/src/styles/projects/ProjectIntro.module.css
@@ -43,7 +43,7 @@
 
 .heading {
   font-family: "Chronicle Display", "Times New Roman", serif;
-  font-size: 38px;
+  font-size: 35px;
   line-height: 1.2;
   letter-spacing: 0.08em;
   text-transform: uppercase;
@@ -122,7 +122,7 @@
 /* CLOUD-SHAPED IMAGE MASK */
 .cloudShapeImage {
   object-fit: cover;
-  object-position: center;
+  /* object-position: center; */
   width: 100%;
   height: 100%;
 
