--- a/src/styles/projects/ProjectHero.module.css
+++ b/src/styles/projects/ProjectHero.module.css
@@ -259,3 +259,13 @@
     font-size: 1rem;
   }
 }
+.heroVideo {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.heroImage {
+  object-fit: cover;
+}
